--- a/page1.html
+++ b/page1.html
@@ -187,7 +187,7 @@
                     <li><a href="abigailS_prfl.html">Intro</a></li>
                     <li><a href="page1.html">Academics</a></li>
                     <li><a href="page2.html">Athletics</a></li>
-                    <li><a href="page3.html">extracurricular</a></li>
+                    <li><a href="page3.html">Extracurricular</a></li>
                     <li><a href="page4.html">Leadership</a></li>
                     <li><a href="page5.html">CS</a></li>
                 </ul>
@@ -238,15 +238,6 @@
             </div>
         </div>
     </section>
-            
-    <section id="TOEFL" class="section4">
-        <div class="container">
-            <div class="card">
-                <h2>TOEFL Score</h2>
-                <img src="tp5.jpg" alt="">
-            </div>
-        </div>
-    </section>   
     
     <section id="SAT" class="section6">
         <div class="container">
